<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    android:paddingBottom="16dp"
    tools:context="com.example.myapplication.MainActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fingerprint_guide"
        android:layout_centerHorizontal="true"
        android:background="@mipmap/fingerprint_normal"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fingerprint_guide_tip"
        android:text="@string/fingerprint_recognition_guide_tip"
        android:textSize="18sp"
        android:textColor="@color/colorAccent"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/fingerprint_guide"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fingerprint_recognition_start"
        android:text="@string/fingerprint_recognition_start"
        android:layout_below="@id/fingerprint_guide_tip"
        android:layout_marginTop="10dp"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fingerprint_recognition_cancel"
        android:layout_marginTop="10dp"
        android:layout_below="@id/fingerprint_recognition_start"
        android:text="@string/fingerprint_recognition_cancel"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fingerprint_recognition_sys_unlock"
        android:layout_below="@id/fingerprint_recognition_cancel"
        android:text="@string/fingerprint_recognition_unlock_screen"/>

    <Button
        android:id="@+id/fingerprint_recognition_sys_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fingerprint_recognition_sys_unlock"
        android:layout_marginTop="10dp"
        android:text="@string/fingerprint_sys_setting_page" />


</RelativeLayout>
